--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dependencies = [
     "pandas>=2.3.1,<3",
     "azure-identity>=1.24.0,<2",
     "azure-keyvault-secrets>=4.2.0,<5",
+    "jsonschema>=4.25.1",
 ]
 
 [dependency-groups]
