--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -131,6 +131,8 @@ navigation:
             path: credentials/totp.mdx
           - page: Bitwarden
             path: credentials/bitwarden.mdx
+          - page: Custom Credential Service
+            path: credentials/custom-credential-service.mdx
       - section: Browser Sessions (Beta)
         contents:
           - page: Introduction
