--- a/skyvern-frontend/package.json
+++ b/skyvern-frontend/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "cross-spawn": "^7.0.6",
     "embla-carousel-react": "^8.0.0",
     "express": "^4.21.2",
