🔄 synced local 'pyproject.toml' with remote 'pyproject.toml'
<!-- ELLIPSIS_HIDDEN -->

> [!IMPORTANT]
> Add OpenTelemetry tracing for Temporal workers, exporting traces to Datadog, and update infrastructure and dependencies accordingly.
>
>   - **New Features**:
>     - Added OpenTelemetry/OTLP tracing in `temporal_v2_worker.py` to export workflow and activity traces to Datadog.
>     - Introduced `_init_otel_tracer()` function to initialize OpenTelemetry tracer.
>   - **Infrastructure**:
>     - Enabled OTLP gRPC/HTTP endpoints in `values.yaml` for OpenTelemetry traces.
>   - **Dependencies**:
>     - Added `temporalio[opentelemetry]` and `opentelemetry-exporter-otlp-proto-grpc` to `pyproject.toml` under `cloud` dependencies.
>   - **CI/CD**:
>     - Added a step in `ci.yml` to check if `uv.lock` is up to date with `pyproject.toml`.
>
> <sup>This description was created by </sup>[<img alt="Ellipsis" src="https://img.shields.io/badge/Ellipsis-blue?color=175173">](https://www.ellipsis.dev?ref=Skyvern-AI%2Fskyvern-cloud&utm_source=github&utm_medium=referral)<sup> for 6292c62af9d0854a116752183f77caf9787edb58. You can [customize](https://app.ellipsis.dev/Skyvern-AI/settings/summaries) this summary. It will automatically update as commits are pushed.</sup>

----

<!-- ELLIPSIS_HIDDEN -->

<!-- This is an auto-generated comment: release notes by coderabbit.ai -->
## Summary by CodeRabbit

* **New Features**
  * Added OpenTelemetry/OTLP tracing so workflow and activity traces are captured and exported to Datadog.

* **Chores**
  * Enabled OTLP/OpenTelemetry gRPC and HTTP endpoints in infrastructure configuration.
  * Added OTLP-related runtime dependencies and formatter integration to project configuration.
  * CI now verifies lockfile consistency with project dependencies during pipeline runs.

<sub>✏️ Tip: You can customize this high-level summary in your review settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,9 +72,11 @@ dependencies = [
 cloud = [
     "ddtrace>=2.3.2,<3",
     "stripe>=9.7.0,<10",
+    "temporalio[opentelemetry]>=1.6.0,<2",
     "temporalio>=1.6.0,<2",
     "dramatiq[asyncio]>=1.18.0,<2",
     "redis>=5.0.3,<6",
+    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0,<2",
 ]
 dev = [
     "isort>=5.13.2",
@@ -195,9 +197,9 @@ skyvern = "skyvern.cli.commands:cli_app"
 norecursedirs = ["eval"]
 
 [tool.codeflash]
-# All paths are relative to this pyproject.toml's directory.                                                                                                                                                                                                                                                                 
-module-root = "skyvern"                                                                                                                                                                                                                                                                                                      
-tests-root = "codeflash-tests"                                                                                                                                                                                                                                                                                                         
-test-framework = "pytest"                                                                                                                                                                                                                                                                                                    
-ignore-paths = ["skyvern/client"]                                                                                                                                                                                                                                                                                                         
+# All paths are relative to this pyproject.toml's directory.
+module-root = "skyvern"
+tests-root = "codeflash-tests"
+test-framework = "pytest"
+ignore-paths = ["skyvern/client"]
 formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
