--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -83,6 +83,8 @@ navigation:
             path: running-tasks/cancel-runs.mdx
           - page: Webhooks FAQ
             path: running-tasks/webhooks-faq.mdx
+          - page: Proxy & Geo Targeting
+            path: running-tasks/proxy-location.mdx
           - page: Advanced Settings for tasks
             hidden: true
             path: running-tasks/advanced-features.mdx
