--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -1,6 +1,6 @@
 instances:
   - url: skyvern.docs.buildwithfern.com/docs
-    custom-domain: skyvern.com/docs
+    custom-domain: www.skyvern.com/docs
 title: Skyvern
 favicon: images/skyvern_favicon_small.png
 logo:
