--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ dev = [
     "aiosqlite>=0.21.0,<0.22",
     "moto[s3, server]>=5.1.5,<6",
     "curlify>=3.0.0",
+    "openpyxl>=3.1.0",
 ]
 
 [tool.hatch.build]
