--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,11 +61,11 @@ dependencies = [
     "lark>=1.2.2,<2",
     "libcst>=1.8.2,<2",
     "curlparser>=0.1.0,<0.2",
-    "openpyxl>=3.1.5,<4",
     "pandas>=2.3.1,<3",
     "azure-identity>=1.24.0,<2",
     "azure-keyvault-secrets>=4.2.0,<5",
     "jsonschema>=4.25.1",
+    "python-calamine>=0.6.1",
 ]
 
 [dependency-groups]
@@ -98,6 +98,8 @@ dev = [
     "ruff>=0.11.12,<0.12",
     "aiosqlite>=0.21.0,<0.22",
     "moto[s3, server]>=5.1.5,<6",
+    "curlify>=3.0.0",
+    "openpyxl>=3.1.0",
 ]
 
 [tool.hatch.build]
