--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "asyncpg>=0.30.0,<0.31",
     "json-repair>=0.34.0,<0.35",
     "pypdf>=5.1.0,<6",
+    "pdfplumber>=0.11.0,<0.12",
     "fastmcp>=2.10.1,<3",
     "psutil>=7.0.0",
     "tiktoken>=0.9.0",
