--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,12 @@ dependencies = [
     "toml>=0.10.2,<0.11",
     "jinja2>=3.1.2,<4",
     "uvicorn[standard]>=0.24.0.post1,<0.25",
-    "litellm>=1.75.8",
+    "litellm>=1.80.10",
     "playwright>1.46.0 ; python_version >= '3.12' and python_version < '3.14'",
     "playwright==1.46.0 ; python_version >= '3.11' and python_version < '3.12'",
     "greenlet>3.0.3 ; python_version >= '3.12' and python_version < '3.14'",
     "greenlet==3.0.3 ; python_version >= '3.11' and python_version < '3.12'",
-    "pillow>=10.2.0",
+    "pillow>=10.1.0,<11",
     "starlette-context>=0.3.6,<0.4",
     "pydantic>=2.5.2,<3",
     "pydantic-settings>=2.1.0,<3",
