--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -208,6 +208,9 @@ navigation:
             contents:
               - GET /v1/artifacts/{artifact_id}
               - GET /v1/runs/{run_id}/artifacts
+          - section: Files
+            contents:
+              - POST /v1/upload_file
           - section: Scripts
             hidden: true
             contents:
