Stricter mypy rules for skyvern.library.*

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,5 +6,15 @@ disallow_untyped_defs = True
 exclude = ^(venv|venv-dev)
 ignore_missing_imports = True
 
+[mypy-skyvern.library.*]
+ignore_missing_imports = False
+follow_imports = normal
+disable_error_code = arg-type, override, return-value, valid-type, no-any-return
+
+; Disabling for generated code
+[mypy-skyvern.client.*]
+follow_imports = normal
+ignore_errors = True
+
 [mypy-numpy.*]
 ignore_errors = True
