--- a/env.ollama.example
+++ b/env.ollama.example
@@ -2,6 +2,7 @@
 ENABLE_OLLAMA=true
 OLLAMA_SERVER_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.1
+OLLAMA_SUPPORTS_VISION=false
 
 # --- DISABLE OTHER PROVIDERS ---
 ENABLE_OPENAI=false
