--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dependencies = [
     "azure-keyvault-secrets>=4.2.0,<5",
     "jsonschema>=4.25.1",
     "python-calamine>=0.6.1",
+    "urllib3>=2.6.0",
 ]
 
 [dependency-groups]
