--- a/integrations/llama_index/pyproject.toml
+++ b/integrations/llama_index/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "skyvern-llamaindex"
-version = "0.2.1"
+version = "0.2.2"
 description = "Skyvern integration for LlamaIndex"
 authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
 requires-python = ">=3.11,<3.14"
@@ -8,6 +8,7 @@ readme = "README.md"
 dependencies = [
     "skyvern>=0.2.0",
     "llama-index>=0.12.19,<0.13",
+    "urllib3>=2.6.0",
 ]
 
 [build-system]
