--- a/integrations/langchain/pyproject.toml
+++ b/integrations/langchain/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "skyvern-langchain"
-version = "0.2.0"
+version = "0.2.1"
 description = ""
 authors = [{ name = "lawyzheng", email = "lawy@skyvern.com" }]
 requires-python = ">=3.11,<3.14"
@@ -9,6 +9,8 @@ readme = "README.md"
 dependencies = [
     "skyvern>=0.2.0",
     "langchain>=0.3.19,<0.4",
+    "langchain-core>=0.3.81",
+    "urllib3>=2.6.0",
 ]
 
 [build-system]
