--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ dependencies = [
     "jsonschema>=4.25.1",
     "python-calamine>=0.6.1",
     "urllib3>=2.6.0",
+    "zstandard>=0.25.0",
 ]
 
 [dependency-groups]
