🔄 synced local 'pyproject.toml' with remote 'pyproject.toml'
## Summary
- add flex-tier config `OPENAI_GPT5_MINI_FLEX` mapped to OpenAI GPT-5-mini with flex service tier + longer timeout
- expose `skyvern-openai-gpt5-mini-flex` for primary/secondary handler overrides

## Testing
- pre-commit hooks (ruff/mypy/isort/ruff format) via git commit

<!-- This is an auto-generated comment: release notes by coderabbit.ai -->
## Summary by CodeRabbit

* **New Features**
  * Added OpenAI GPT-5 Mini FLEX variant to available LLM options, offering a flexible service tier with optimized performance and extended timeout for more demanding requests.

<sub>✏️ Tip: You can customize this high-level summary in your review settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->
<!-- ELLIPSIS_HIDDEN -->

----

> [!IMPORTANT]
> Add `OPENAI_GPT5_MINI_FLEX` configuration and route Magnifex to it with flex tier and longer timeout.
>
>   - **Behavior**:
>     - Add `OPENAI_GPT5_MINI_FLEX` config in `config_registry.py` with flex service tier and 900s timeout.
>     - Route `magnifex-gpt5-mini-flex` to `OPENAI_GPT5_MINI_FLEX` in `initialize_llm_api_handler()` and `initialize_secondary_llm_api_handler()` in `scripts/skyvern_run_script_helper.py`.
>   - **Configuration**:
>     - Register `OPENAI_GPT5_MINI_FLEX` in `LLMConfigRegistry` with `gpt-5-mini-2025-08-07` model, supporting vision, and 128000 max tokens.
>   - **Misc**:
>     - Expose `skyvern-openai-gpt5-mini-flex` for handler overrides in `scripts/skyvern_run_script_helper.py`.
>
> <sup>This description was created by </sup>[<img alt="Ellipsis" src="https://img.shields.io/badge/Ellipsis-blue?color=175173">](https://www.ellipsis.dev?ref=Skyvern-AI%2Fskyvern-cloud&utm_source=github&utm_medium=referral)<sup> for 92eda15d4e1cd7179a15310e48f7b4cacc82c65b. You can [customize](https://app.ellipsis.dev/Skyvern-AI/settings/summaries) this summary. It will automatically update as commits are pushed.</sup>

<!-- ELL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dependencies = [
     "filetype>=1.2.0,<2",
     "aioredlock>=0.7.3,<0.8",
     "tldextract>=5.1.2,<6",
-    "websockets>=12.0,<15.1",
+    "websockets~=12.0",
     "email-validator>=2.2.0,<3",
     "requests-toolbelt>=1.0.0,<2",
     "rich[jupyter]>=13.7.0,<14",
