🔄 synced local 'pyproject.toml' with remote 'pyproject.toml'
<!-- ELLIPSIS_HIDDEN -->

> [!IMPORTANT]
> Introduces SSE for streaming chat responses in `/workflow/copilot/chat-post`, enhancing real-time feedback and error handling.
>
>   - **Behavior**:
>     - Implements SSE for `/workflow/copilot/chat-post` in `workflow_copilot.py` to stream chat responses.
>     - Adds keep-alive pings every 10 seconds to maintain connection.
>     - Improved error handling with specific error messages streamed back.
>   - **Frontend**:
>     - Introduces `sse.ts` to handle SSE connections using `@microsoft/fetch-event-source`.
>     - Updates `WorkflowCopilotChat.tsx` to use `getSseClient` for streaming chat responses.
>   - **Dependencies**:
>     - Adds `sse-starlette` to `pyproject.toml` and `uv.lock`.
>     - Adds `@microsoft/fetch-event-source` to `package.json`.
>
> <sup>This description was created by </sup>[<img alt="Ellipsis" src="https://img.shields.io/badge/Ellipsis-blue?color=175173">](https://www.ellipsis.dev?ref=Skyvern-AI%2Fskyvern-cloud&utm_source=github&utm_medium=referral)<sup> for 96d4b4c35d68b28bf07360efd04c881e4e39d7ba. You can [customize](https://app.ellipsis.dev/Skyvern-AI/settings/summaries) this summary. It will automatically update as commits are pushed.</sup>

----

<!-- ELLIPSIS_HIDDEN -->

<!-- This is an auto-generated comment: release notes by coderabbit.ai -->
## Summary by CodeRabbit

* **New Features**
  * Chat now streams responses in real time for faster, incremental feedback.

* **Improvements**
  * More reliable connections with periodic keep-alive pings.
  * Clearer error notifications and improved failure handling in the chat flow.
  * Consistent handling of chat messages and timestamps for accurate display.

* **Chores**
  * Frontend and backend updated to support SSE-based streaming for the chat experience.

<sub>✏️ Tip: You can customize this high-level summary in your review settings.</sub>
<!-- end of auto-generated comment: release no

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dependencies = [
     "python-calamine>=0.6.1",
     "urllib3>=2.6.0",
     "zstandard>=0.25.0",
+    "sse-starlette>=3.0.3,<4",
 ]
 
 [dependency-groups]
