🔄 synced local 'pyproject.toml' with remote 'pyproject.toml'
<!-- ELLIPSIS_HIDDEN -->

> [!IMPORTANT]
> Add web benchmarking scripts with Google Sheets integration for task execution and status tracking, including new scripts for task management and dataset fetching.
>
>   - **New Features**:
>     - Add `execute_hitl_tasks_on_skyvern.py` for executing HITL tasks with options for task limits, categories, and randomization.
>     - Add `update_skyvern_task_status.py` for updating task statuses in Google Sheets using Skyvern API.
>     - Add `get_skyvern_task_status.py` for fetching the status of a single task.
>     - Add `fetch_hitl_dataset_from_github.py` for fetching and previewing the HITL dataset from GitHub.
>     - Integrate Google Sheets for task tracking and result logging.
>   - **Documentation**:
>     - Add `README.md` in `scripts/web_bench/` detailing usage, configuration, and dataset information.
>   - **Dependencies**:
>     - Add `gspread` to development dependencies in `pyproject.toml`.
>
> <sup>This description was created by </sup>[<img alt="Ellipsis" src="https://img.shields.io/badge/Ellipsis-blue?color=175173">](https://www.ellipsis.dev?ref=Skyvern-AI%2Fskyvern-cloud&utm_source=github&utm_medium=referral)<sup> for a8069e1767e10265b3063a1b951e3152b5f765a0. You can [customize](https://app.ellipsis.dev/Skyvern-AI/settings/summaries) this summary. It will automatically update as commits are pushed.</sup>

----

<!-- ELLIPSIS_HIDDEN -->

<!-- This is an auto-generated comment: release notes by coderabbit.ai -->
## Summary by CodeRabbit

* **New Features**
  * Full suite of web-benchmarking tools for running HITL tasks, concurrent execution, progress logging, and task payload handling.
  * Google Sheets integration for loading datasets, recording results, bulk overwrites, and automated status synchronization and querying.
  * Colored console logging and credential validation utilities.

* **Documentation**
  * Added README with usage, configuration, CL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,6 +104,7 @@ dev = [
     "moto[s3, server]>=5.1.5,<6",
     "curlify>=3.0.0",
     "openpyxl>=3.1.0",
+    "gspread>=6",
 ]
 
 [tool.hatch.build]
