--- a/pyproject.toml
+++ b/pyproject.toml
@@ -202,4 +202,4 @@ plugins = "sqlalchemy.ext.mypy.plugin"
 skyvern = "skyvern.cli.commands:cli_app"
 
 [tool.pytest.ini_options]
-norecursedirs = ["eval"]
+norecursedirs = ["eval", "tests/sdk"]
