[CI] Fix: allow neutral conclusions for auto-merge sync checks
Fixes auto-merge-sync failures when wait-on-check-action sees CodeQL as completed (neutral).\n\n- Add neutral to allowed-conclusions for lewagon/wait-on-check-action\n- Keep success and skipped behavior unchanged

--- a/.github/workflows/auto-merge-sync.yml
+++ b/.github/workflows/auto-merge-sync.yml
@@ -20,6 +20,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
           ignore-checks: auto-merge
+          allowed-conclusions: success, skipped, neutral
       - name: Set token for author
         id: set-token
         run: |
