[SKY-6] Backend: Implement Redis-backed notification registry and pub/sub system

--- a/.env.example
+++ b/.env.example
@@ -141,3 +141,12 @@ SKYVERN_AUTH_BITWARDEN_CLIENT_SECRET=your-client-secret-here
 
 # Timeout in seconds for Bitwarden operations
 # BITWARDEN_TIMEOUT_SECONDS=60
+
+# Shared Redis URL used by any service that needs Redis (pub/sub, cache, etc.)
+# REDIS_URL=redis://localhost:6379/0
+
+# Notification registry type: "local" (default, in-process) or "redis" (multi-pod)
+# NOTIFICATION_REGISTRY_TYPE=local
+
+# Optional: override Redis URL specifically for notifications (falls back to REDIS_URL)
+# NOTIFICATION_REDIS_URL=
