--- a/skyvern-frontend/.env.example
+++ b/skyvern-frontend/.env.example
@@ -15,3 +15,7 @@ VITE_ENABLE_LOG_ARTIFACTS=false
 
 # Enable code block node
 VITE_ENABLE_CODE_BLOCK=true
+
+# Enable 2FA verification code notifications (toasts, sounds, OS notifications, WebSocket streaming)
+# Set to "false" to disable for orgs with high task/workflow volume
+VITE_ENABLE_2FA_NOTIFICATIONS=true
